<resources>
    <string name="app_name">ClonePlanting</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Please Login</string>
    <string name="title_activity_base">กิจกรรมในเครือข่าย</string>

    <string name="title_activity_send">การส่งโคลน</string>
    <string name="title_activity_family_details">รานละเอียดคู่ผสม</string>
    <string name="title_activity_receive">การรับโคลน</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">ส่ง</string>
    <string name="receive">รับ</string>
    <string name="plant">ปลุก</string>
    <string name="check">เช็ค</string>
    <string name="pic">Pic</string>
    <string name="text">Text</string>
    <string name="amount_hint">จำนวน</string>
    <string name="finish">สำเร็จ</string>
    <string name="cancle">ยกเลิก</string>
    <string name="qr_scanner_dialog_title_send">กรุณาระบุจำนวนที่ส่ง</string>
    <string name="open">เปิด</string>
    <string name="fix">แก้ไข</string>
    <string name="delete">ลบ</string>
    <string name="qr_scanner_dialog_title_receive">กรุณาระบุจำนวนที่รับ</string>
    <string name="test_text_message">.            ลิสต์ฟิวเจอร์โฟม แกงค์ราชานุญาต สปอร์ตโซนี่ เรซินสะบึมส์เฮียเฟอร์นิเจอร์แฟ็กซ์สันทนาการ แชมป์จีดีพีตรวจทาน ไทเฮาฟอยล์คูลเลอร์ไวกิ้งยะเยือก ฟาสต์ฟู้ดเนอะไหร่ไมค์วาทกรรม โอเวอร์ เรซิน กีวีโอวัลตินคลับโอเคสเตริโอ บาร์บีคิวชัตเตอร์แซ็กโซโฟนเซ็นเซอร์ เปราะบาง เพนตากอนบูมวอล์กเคสรองรับสมาพันธ์ แพนงเชิญมอคค่ามั้ยโอเพ่นติ่มซำเคลม สุริยยาตรฮิตโปรเจ็กเตอร์เพนตากอนปูอัดไลท์ กัมมันตะแอพพริคอท</string>

    <!-- List Navigation Item1-->
    <string name="navigation_item_home">หน้าแรก</string>
    <string name="navigation_item_personalInformation">ข้อมูลส่วนตัว</string>
    <string name="navigation_item_network">เครือข่าย</string>
    <string name="navigation_item_land_management">การจัดการแปลง</string>
    <string name="navigation_item_setting">Setting</string>
    <string name="navigation_item_logout">Logout</string>
    <string name="sampleName">Jitpakorn Rattanadilok na buket</string>
    <string name="title_activity_received_clone">รับโคลน</string>
    <string name="title_activity_blank">BlankActivity</string>

    <string-array name="place">

        <item>ALL</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
    </string-array>
    <string name="title_activity_planting_clone">PlantingCloneActivity</string>
    <string name="title_activity_row_list_adapter">RowListAdapter</string>
    <string name="title_activity_land_selection">LandSelectionActivity</string>
    <string name="title_activity_create_land">CreateLandActivity</string>


    <string name="LandName">ชื่อแปลง</string>
    <string name="LandType">ประเภทแปลง</string>
    <string name="LandArea">ขนาดแปลง(ไร่)</string>
    <string name="LandWidth">ความกว้าง(เมตร)</string>
    <string name="LandLength">ความยาว(เมตร)</string>
    <string name="Address">ขนาดที่อยู่</string>
    <string name="Location">ตำแหน่ง</string>
    <string name="map_api_key">AIzaSyD1aoYGEoZ2PSQzMBEeOlX1fvG8maOveiE</string>

    <string-array name="selectionType">
        <item>1st Selection</item>
        <item>2nd Selection</item>
    </string-array>
    <string name="title_activity_confirm_create_land">ConfirmCreateLandActivity</string>
    <string name="qr_scanner_dialog_title_plant">กรุณาระบุจำนวนที่ปลูก</string>
    <string name="title_activity_check_clone">ตรวจสอบต้นที่ตาย</string>
    <string name="title_activity_personal_profile">PersonalProfile</string>
    <string name="timline">TimeLine</string>
    <string name="personal_profile">ข้อมูลส่วนตัว</string>
    <string name="land_list">ข้อมูลแปลง</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_land_management">การจัดการแปลง</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_custom_view_example">CustomViewExampleActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="details_topic_list">
        <item>ส่ง</item>
        <item>รับ</item>
        <item>ปลูก</item>
        <item>รอด</item>
        <item>โรค</item>
    </string-array>
    <string name="title_activity_breeder_network">เครือข่าย</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">กรุณาเปิด GPS</string>
    <string name="open_location_settings">Open</string>
    <string name="logout">Logout</string>
    <string name="message_logout">ยืนยันการออกจากระบบ</string>
    <string name="title_activity_name_tent_list_fragment">NameTentListFragment</string>
    <string name="ok">ต้องการ</string>
    <string name="not_ok">ไม่ต้องการ</string>
    <string name="cancle_create_land">ยกเลิกการสร้างแปลง</string>
    <string name="continue_do">ทำต่อ</string>

</resources>
