<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_item_1"
        android:checked="true"
        android:icon="@drawable/ic_textsms_black_24dp"
        android:title="@string/navigation_item_home"/>
    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/navigation_item_personalInformation"/>
    <item
        android:id="@+id/navigation_item_network"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/navigation_item_network"/>
    <item
        android:id="@+id/navigation_item_land_management"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/navigation_item_land_management"/>
    <item
        android:id="@+id/navigation_item_setting"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/navigation_item_setting"
        />
    <item
        android:id="@+id/navigation_item_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/navigation_item_logout"/>
</menu>