<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/home_menu_default_button_padding">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/buttonSend"
            android:drawableTop="@drawable/ic_send_black_24dp"
            android:text="@string/send"
            android:layout_width="@dimen/home_menu_default_button_width"
            android:layout_height="@dimen/home_menu_default_button_height" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/buttonReceive"
            android:drawableTop="@drawable/ic_call_received_black_24dp"
            android:text="@string/receive"
            android:layout_width="@dimen/home_menu_default_button_width"
            android:layout_height="@dimen/home_menu_default_button_height" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/buttonPlant"
            android:drawableTop="@drawable/ic_plant_v1_24dp"
            android:text="@string/plant"
            android:layout_width="@dimen/home_menu_default_button_width"
            android:layout_height="@dimen/home_menu_default_button_height" />

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/buttonCheck"
            android:drawableTop="@drawable/ic_check_black_24dp"
            android:text="@string/check"
            android:layout_width="@dimen/home_menu_default_button_width"
            android:layout_height="@dimen/home_menu_default_button_height" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/buttonPic"
            android:drawableTop="@drawable/ic_camera_alt_black_24dp"
            android:text="@string/pic"
            android:layout_width="@dimen/home_menu_default_button_width"
            android:layout_height="@dimen/home_menu_default_button_height" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/buttonText"
            android:drawableTop="@drawable/ic_textsms_black_24dp"
            android:text="@string/text"
            android:layout_width="@dimen/home_menu_default_button_width"
            android:layout_height="@dimen/home_menu_default_button_height" />

    </LinearLayout>


</LinearLayout>