<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textViewScannerTitle"
        android:textSize="20sp"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <FrameLayout
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <me.dm7.barcodescanner.zxing.ZXingScannerView
            android:id="@+id/scannerView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/textViewQRCodeResult"
            android:visibility="gone"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="A14225"
            android:textSize="32sp"
            android:textColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#55FFFFFF"
            />
    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:inputType="number"
            android:hint="@string/amount_hint"
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <Button
            android:text="เลือกจาก List"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/buttonOpenList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonFinish"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>